--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Quiz",
   "main": "server/server.js",
   "engines": {
-  "node": "16.5.1"
+  "node": "v16.5.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
